@@ -17,8 +17,6 @@
  */
 package org.jackhuang.hmcl.util.platform;
 
-import org.jackhuang.hmcl.util.StringUtils;
-
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.util.*;
@@ -47,9 +45,9 @@ public final class CommandBuilder {
 
     private String quote(String s) {
         if (OperatingSystem.WINDOWS == os) {
-            return quoteBatch(s);
+            return toBatchStringLiteral(s);
         } else {
-            return quoteShell(s);
+            return toShellStringLiteral(s);
         }
     }
 
@@ -83,28 +81,97 @@ public final class CommandBuilder {
         return this;
     }
 
-    public String addDefault(String opt) {
-        for (Item item : raw) {
-            if (item.arg.equals(opt)) {
-                return item.arg;
+    public void addAllDefault(Collection<String> args) {
+        addAllDefault(args, true);
+    }
+
+    public void addAllDefaultWithoutParsing(Collection<String> args) {
+        addAllDefault(args, false);
+    }
+
+    private void addAllDefault(Collection<String> args, boolean parse) {
+        loop:
+        for (String arg : args) {
+            if (arg.startsWith("-D")) {
+                int idx = arg.indexOf('=');
+                if (idx >= 0) {
+                    addDefault(arg.substring(0, idx + 1), arg.substring(idx + 1), parse);
+                } else {
+                    String opt = arg + "=";
+                    for (Item item : raw) {
+                        if (item.arg.startsWith(opt)) {
+                            LOG.info("Default option '" + arg + "' is suppressed by '" + item.arg + "'");
+                            continue loop;
+                        } else if (item.arg.equals(arg)) {
+                            continue loop;
+                        }
+                    }
+                    raw.add(new Item(arg, parse));
+                }
+                continue;
             }
+
+            if (arg.startsWith("-XX:")) {
+                Matcher matcher = UNSTABLE_OPTION_PATTERN.matcher(arg);
+                if (matcher.matches()) {
+                    addUnstableDefault(matcher.group("key"), matcher.group("value"), parse);
+                    continue;
+                }
+
+                matcher = UNSTABLE_BOOLEAN_OPTION_PATTERN.matcher(arg);
+                if (matcher.matches()) {
+                    addUnstableDefault(matcher.group("key"), "+".equals(matcher.group("value")), parse);
+                    continue;
+                }
+            }
+
+            if (arg.startsWith("-X")) {
+                String opt = null;
+                String value = null;
+
+                for (String prefix : new String[]{"-Xmx", "-Xms", "-Xmn", "-Xss"}) {
+                    if (arg.startsWith(prefix)) {
+                        opt = prefix;
+                        value = arg.substring(prefix.length());
+                        break;
+                    }
+                }
+
+                if (opt != null) {
+                    addDefault(opt, value, parse);
+                    continue;
+                }
+            }
+
+            for (Item item : raw) {
+                if (item.arg.equals(arg)) {
+                    continue loop;
+                }
+            }
+            raw.add(new Item(arg, parse));
         }
-        raw.add(new Item(opt, true));
-        return null;
     }
 
     public String addDefault(String opt, String value) {
+        return addDefault(opt, value, true);
+    }
+
+    private String addDefault(String opt, String value, boolean parse) {
         for (Item item : raw) {
             if (item.arg.startsWith(opt)) {
                 LOG.info("Default option '" + opt + value + "' is suppressed by '" + item.arg + "'");
                 return item.arg;
             }
         }
-        raw.add(new Item(opt + value, true));
+        raw.add(new Item(opt + value, parse));
         return null;
     }
 
     public String addUnstableDefault(String opt, boolean value) {
+        return addUnstableDefault(opt, value, true);
+    }
+
+    private String addUnstableDefault(String opt, boolean value, boolean parse) {
         for (Item item : raw) {
             final Matcher matcher = UNSTABLE_BOOLEAN_OPTION_PATTERN.matcher(item.arg);
             if (matcher.matches()) {
@@ -115,14 +182,18 @@ public final class CommandBuilder {
         }
 
         if (value) {
-            raw.add(new Item("-XX:+" + opt, true));
+            raw.add(new Item("-XX:+" + opt, parse));
         } else {
-            raw.add(new Item("-XX:-" + opt, true));
+            raw.add(new Item("-XX:-" + opt, parse));
         }
         return null;
     }
 
     public String addUnstableDefault(String opt, String value) {
+        return addUnstableDefault(opt, value, true);
+    }
+
+    private String addUnstableDefault(String opt, String value, boolean parse) {
         for (Item item : raw) {
             final Matcher matcher = UNSTABLE_OPTION_PATTERN.matcher(item.arg);
             if (matcher.matches()) {
@@ -132,12 +203,16 @@ public final class CommandBuilder {
             }
         }
 
-        raw.add(new Item("-XX:" + opt + "=" + value, true));
+        raw.add(new Item("-XX:" + opt + "=" + value, parse));
         return null;
     }
 
     public boolean removeIf(Predicate<String> pred) {
         return raw.removeIf(i -> pred.test(i.arg));
+    }
+
+    public boolean noneMatch(Predicate<String> predicate) {
+        return raw.stream().noneMatch(it -> predicate.test(it.arg));
     }
 
     @Override
@@ -154,8 +229,8 @@ public final class CommandBuilder {
     }
 
     private static class Item {
-        String arg;
-        boolean quote;
+        final String arg;
+        final boolean quote;
 
         Item(String arg, boolean quote) {
             this.arg = arg;
@@ -164,12 +239,12 @@ public final class CommandBuilder {
 
         @Override
         public String toString() {
-            return quote ? (OperatingSystem.WINDOWS == OperatingSystem.CURRENT_OS ? quoteBatch(arg) : quoteShell(arg)) : arg;
+            return quote ? (OperatingSystem.WINDOWS == OperatingSystem.CURRENT_OS ? toBatchStringLiteral(arg) : toShellStringLiteral(arg)) : arg;
         }
     }
 
     // Quote for powershell.
-    public static String pwshString(String str) {
+    public static String toPwshStringLiteral(String str) {
         return "'" + str.replace("'", "''") + "'";
     }
 
@@ -178,7 +253,7 @@ public final class CommandBuilder {
             return true;
         }
         try {
-            final Process process = Runtime.getRuntime().exec("powershell -Command Get-ExecutionPolicy");
+            final Process process = Runtime.getRuntime().exec(new String[]{"powershell", "-Command", "Get-ExecutionPolicy"});
             if (!process.waitFor(5, TimeUnit.SECONDS)) {
                 process.destroy();
                 return false;
@@ -207,19 +282,25 @@ public final class CommandBuilder {
         return true;
     }
 
-    private static String quoteBatch(String s) {
+    private static String escape(String str, char... escapeChars) {
+        for (char ch : escapeChars) {
+            str = str.replace("" + ch, "\\" + ch);
+        }
+        return str;
+    }
+
+    private static String toBatchStringLiteral(String s) {
         String escape = " \t\"^&<>|?*";
         if (StringUtils.containsOne(s, escape.toCharArray()))
             // The argument has not been quoted, add quotes.
             // See explanation at https://github.com/Artoria2e5/node/blob/fix!/child-process-args/lib/child_process.js
             // about making the string "inert to CMD", and associated unit tests
             return '"' + s.replaceAll("(\\\\*)($|\")\"", "$1$1$2").replace("\"", "\"\"") + '"';
-        else {
+        else
             return s;
-        }
     }
 
-    private static String quoteShell(String s) {
+    private static String toShellStringLiteral(String s) {
         String escape = " \t\"!#$&'()*,;<=>?[\\]^`{|}~";
         if (StringUtils.containsOne(s, escape.toCharArray())) {
             return "'" + s.replace("'", "'\''") + "'";
